add some utility functions

--- a/Combining behavioral and neurophysiological data.ipynb
+++ b/Combining behavioral and neurophysiological data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "566b2d2f",
+   "id": "7a316e45",
    "metadata": {},
    "source": [
     "# Combining behavioral and neurophysiological data\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac062cb2",
+   "id": "c0869dcc",
    "metadata": {},
    "source": [
     "The goal of this workshop is to introduce a way of combining neurophysiological data and behavioral observations, on recordings of human EEG in a discrimination task. "
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2188255",
+   "id": "9b14024e",
    "metadata": {},
    "source": [
     "## 1. Description of the experiment and data"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26d70f66",
+   "id": "4c73e01f",
    "metadata": {},
    "source": [
     "In this task, participants were presented at each trial either with an image of a face or a sound, and had to report what they have perceived through key presses (left arrow=sound, right arrow=face) as fast and accuately as possible. A timeout on response time would occur two seconds after stimulus presentation. \n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a5a229",
+   "id": "7dd7b5c4",
    "metadata": {},
    "source": [
     "## 2. Import and visualize data\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65767959",
+   "id": "c4a6038d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +63,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a511684a",
+   "id": "d0274e33",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import raw data\n",
-    "\n",
+    "datastruct=import_raw()\n",
     "\n",
     "# plot electrode location\n",
     "\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1cd17d8",
+   "id": "735d8261",
    "metadata": {},
    "source": [
     "We can see that the data is quite messy, as it is prone to artifacts. In fact, with EEG, any small movement can appear in the signal, from blinking, to sweating, to clenching the jaw. It is necessary to remove them. Run the code below to see how this is improved."
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38d7b20e",
+   "id": "89860647",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "250c7c60",
+   "id": "28ab07ec",
    "metadata": {},
    "source": [
     "This is already much better. Pre-processing is a whole topic to itself, so we will not go into detail in that part, you have the whole master to learn it."
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f34e82ce",
+   "id": "19bd438e",
    "metadata": {},
    "source": [
     "## 3. Look at the behavior\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe5b74b1",
+   "id": "1584a8c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5639352",
+   "id": "04b7055b",
    "metadata": {},
    "source": [
     "We can also gain insight from the errors that people have made."
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5937d149",
+   "id": "3f2a6a35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faee0d16",
+   "id": "6a19fcc2",
    "metadata": {},
    "source": [
     "## 4. Inter-trial phase coherence (ITPC)\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baaa6e6d",
+   "id": "85d6129a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -170,14 +170,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7081beb6",
+   "id": "74c804c6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "eef0864b",
+   "id": "9f641e9e",
    "metadata": {},
    "source": [
     "## 5. Combining ITPC and other quantitative data: wITPC\n",
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f35719ff",
+   "id": "76f36321",
    "metadata": {},
    "outputs": [],
    "source": []
