fill in first two sections

--- a/Combining behavioral and neurophysiological data.ipynb
+++ b/Combining behavioral and neurophysiological data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7a316e45",
+   "id": "27d955ff",
    "metadata": {},
    "source": [
     "# Combining behavioral and neurophysiological data\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0869dcc",
+   "id": "0a5ee025",
    "metadata": {},
    "source": [
     "The goal of this workshop is to introduce a way of combining neurophysiological data and behavioral observations, on recordings of human EEG in a discrimination task. "
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b14024e",
+   "id": "8d1846bc",
    "metadata": {},
    "source": [
     "## 1. Description of the experiment and data"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c73e01f",
+   "id": "4e419748",
    "metadata": {},
    "source": [
     "In this task, participants were presented at each trial either with an image of a face or a sound, and had to report what they have perceived through key presses (left arrow=sound, right arrow=face) as fast and accuately as possible. A timeout on response time would occur two seconds after stimulus presentation. \n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dd7b5c4",
+   "id": "3b375dc4",
    "metadata": {},
    "source": [
     "## 2. Import and visualize data\n",
@@ -50,38 +50,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4a6038d",
+   "id": "139d5222",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import mne\n",
     "import matplotlib.pyplot as plt\n",
-    "from utils import *"
+    "from utils import import_raw,get_epochs,plot_ERP"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0274e33",
+   "id": "d8d4ace0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import raw data\n",
-    "datastruct=import_raw()\n",
+    "subject='756'\n",
+    "datapath='D:\\\\PhD\\\\my_data\\\\{}\\\\{}_calib_000{}'.format(subject,subject,{})\n",
+    "datapath_test='D:\\\\PhD\\\\my_data\\\\{}\\\\{}_test_000{}'.format(subject,subject,{})\n",
+    "nblocks=4\n",
+    "nblocks_test=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c429e163",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eegdata=import_raw(datapath,nblocks)\n",
     "\n",
     "# plot electrode location\n",
+    "eegdata.plot_sensors(show_names=True)\n",
     "\n",
     "# epoch data\n",
-    "\n",
+    "events=[11,12]\n",
+    "tmin=-1\n",
+    "tmax=0.5\n",
+    "epochs=get_epochs(eegdata, events,tmin=tmin, tmax=tmax)\n",
     "\n",
     "# plot ERP\n",
-    "\n"
+    "plot_ERP(epochs,['11','12'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "735d8261",
+   "id": "4707eb12",
    "metadata": {},
    "source": [
     "We can see that the data is quite messy, as it is prone to artifacts. In fact, with EEG, any small movement can appear in the signal, from blinking, to sweating, to clenching the jaw. It is necessary to remove them. Run the code below to see how this is improved."
@@ -90,20 +108,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89860647",
+   "id": "be52fa22",
    "metadata": {},
    "outputs": [],
    "source": [
     "#filter data out\n",
-    "\n",
+    "fmin=None\n",
+    "fmax=30\n",
+    "eegdata_filtered=eegdata.filter(fmin, fmax, fir_design='firwin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02c20711",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#reject outliers that cannot be filtered\n",
+    "#first, we can check if some electrodes have too high impedances\n",
+    "from utils import get_bad_impedance, get_bad_channels_trials\n",
     "\n",
-    "#plot new ERP"
+    "get_bad_impedance(eegdata_filtered)\n",
+    "print(eegdata_filtered.info['bads'])\n",
+    "#then we reject epochs and electrodes that are above a certain threshold \n",
+    "rejt,rejc=get_bad_channels_trials(eegdata_filtered,events)\n",
+    "eegdata_filtered.info['bads'].extend(rejc)\n",
+    "eegdata_filtered = eegdata_filtered.copy().interpolate_bads(reset_bads=False)\n",
+    "print(eegdata_filtered.info['bads'])\n",
+    "\n",
+    "#plot new ERP\n",
+    "clean_epochs=get_epochs(eegdata_filtered, events,tmin=tmin, tmax=tmax)\n",
+    "clean_epochs.drop(rejt)\n",
+    "plot_ERP(clean_epochs,['11','12'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "28ab07ec",
+   "id": "9ac4efba",
    "metadata": {},
    "source": [
     "This is already much better. Pre-processing is a whole topic to itself, so we will not go into detail in that part, you have the whole master to learn it."
@@ -111,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19bd438e",
+   "id": "223027c4",
    "metadata": {},
    "source": [
     "## 3. Look at the behavior\n",
@@ -121,18 +163,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1584a8c9",
+   "id": "6970135c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract response times\n",
+    "from utils import get_RT, get_labels\n",
     "\n",
-    "# plot histograms"
+    "# extract response times\n",
+    "responses=[1001,1002,1003]\n",
+    "RT=get_RT(eegdata_filtered, events, responses, rejt)\n",
+    "\n",
+    "# extract labels\n",
+    "labels=get_labels(clean_epochs)\n",
+    "\n",
+    "# plot histograms\n",
+    "plt.figure()\n",
+    "plt.hist(RT[labels==11],alpha=0.2,label='Visual, mean={:.0f} ms'.format(np.mean(RT[labels==11])))\n",
+    "plt.hist(RT[labels==12],alpha=0.2,label='Auditory, mean={:.0f} ms'.format(np.mean(RT[labels==12])))\n",
+    "plt.title('Histogramm of response times, mean={:.0f} ms'.format(np.mean(RT)))\n",
+    "plt.legend()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "04b7055b",
+   "id": "16654abb",
    "metadata": {},
    "source": [
     "We can also gain insight from the errors that people have made."
@@ -141,16 +195,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3f2a6a35",
+   "id": "a6c19f43",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# count number of errors"
+    "# count number of errors\n",
+    "from utils import get_errors\n",
+    "\n",
+    "errors=get_errors(eegdata_filtered, events,[1001,1002,1003],rejt)\n",
+    "print('This participant committed {} errors'.format(np.sum(errors)))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6a19fcc2",
+   "id": "b3a74ffb",
    "metadata": {},
    "source": [
     "## 4. Inter-trial phase coherence (ITPC)\n",
@@ -162,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d6129a",
+   "id": "a973b3e5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -170,14 +228,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74c804c6",
+   "id": "daedd693",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9f641e9e",
+   "id": "9dd3ec2c",
    "metadata": {},
    "source": [
     "## 5. Combining ITPC and other quantitative data: wITPC\n",
@@ -187,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f36321",
+   "id": "3163e587",
    "metadata": {},
    "outputs": [],
    "source": []
