try to put this image of my paradigm

--- a/Combining behavioral and neurophysiological data.ipynb
+++ b/Combining behavioral and neurophysiological data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a9c7a050",
+   "id": "117ff6ad",
    "metadata": {},
    "source": [
     "# Combining behavioral and neurophysiological data\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b7ff147",
+   "id": "a196cad5",
    "metadata": {},
    "source": [
     "The goal of this workshop is to introduce a way of combining neurophysiological data and behavioral observations, on recordings of human EEG in a discrimination task. "
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "655161ab",
+   "id": "0b4ad8b2",
    "metadata": {},
    "source": [
     "## 1. Description of the experiment and data"
@@ -31,7 +31,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "2b6a6d1e",
+   "id": "bc1ad54d",
    "metadata": {},
    "source": [
     "In this task, participants were presented at each trial either with an image of a face or a sound, and had to report what they have perceived through key presses (left arrow=sound, right arrow=face) as fast and accuately as possible. A timeout on response time would occur two seconds after stimulus presentation. \n",
@@ -43,7 +43,7 @@
     "While performing this task, their EEG activity was recorded using 32 channels (including a reference, located in Fz), along with their response class and time. All information is contained in the EEG recording, that tracks all that happens and when it happens (EEG activity and experiment events). The experiment events are encoded as \"markers\", and are each associated with a type-specific number.\n",
     "\n",
     "The experiment goes as follows:\n",
-    "![paradigm.png](attachment:paradigm.png)\n",
+    "![./paradigm.png](attachment:paradigm.png)\n",
     "During the red cross, participants can blink and move slightly. They are instructed to start focusing as soon as the white cross is displayed, and they are presented with a cue after a few seconds (between 1.5 and 3). This cue is either the image of an eye or an ear, and it predicts with ~80% accuracy the stimulus that is coming next (eye->face image, ear->sound).\n",
     "\n",
     "You can find below a list of the possible markers you will find in data:\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e26d0605",
+   "id": "3a6fa6ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85726de1",
+   "id": "d73df82c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efe4a026",
+   "id": "dc8e9b72",
    "metadata": {},
    "source": [
     "## 2. Import and visualize data\n",
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3c69f6f",
+   "id": "7f33a977",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62e40d11",
+   "id": "57284fab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa633bfc",
+   "id": "9a4330da",
    "metadata": {},
    "source": [
     "We can see that the data is quite messy, as it is prone to artifacts. In fact, with EEG, any small movement can appear in the signal, from blinking, to sweating, to clenching the jaw. It is necessary to remove them. Run the code below to see how this is improved."
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85fdd883",
+   "id": "824a1baf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf162f48",
+   "id": "0c2824b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48989595",
+   "id": "dd1a0783",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "450881e4",
+   "id": "0941a110",
    "metadata": {},
    "source": [
     "This is already much better. Pre-processing is a whole topic to itself, so we will not go into detail in that part, you have the whole master to learn it."
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2e264f8",
+   "id": "c9c39054",
    "metadata": {},
    "source": [
     "## 3. Look at the behavior\n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4302b45d",
+   "id": "2816bde7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3725f08",
+   "id": "e5df6fb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6b6dd73",
+   "id": "0775c218",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "729b91e6",
+   "id": "4d48bbc1",
    "metadata": {},
    "source": [
     "We can also gain insight from the errors that people have made."
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d879239d",
+   "id": "c5232632",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d596731",
+   "id": "f0d52f8d",
    "metadata": {},
    "source": [
     "## 4. Combining brain activity and other quantitative data: wITPC\n",
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63f8769a",
+   "id": "8a9e6942",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f505587a",
+   "id": "fce9555a",
    "metadata": {},
    "source": [
     "Have a look at the maximum and minimum of the phase, what do you notice?"
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e6afc3e",
+   "id": "0ee1125d",
    "metadata": {},
    "source": [
     "In fact, the phase is periodic: it varies between $-\\pi$ and $\\pi$, and has a periodicity of $2\\pi$, which means that $-\\pi = \\pi$, and $0=2\\pi$ etc. \n",
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc2a3e73",
+   "id": "34dc1af5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daad4a33",
+   "id": "4ac5b5ae",
    "metadata": {},
    "source": [
     "Let's see what that looks like!"
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e61c933d",
+   "id": "e1806e6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "170e2da0",
+   "id": "de39cb93",
    "metadata": {},
    "source": [
     "You can now try to look at the different conditions separately. Do you see any difference in the wITPC for both conditions?\n",
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2992d4b",
+   "id": "fb977e80",
    "metadata": {},
    "source": [
     "## 5. Conclusion\n",
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd235504",
+   "id": "e65581fa",
    "metadata": {},
    "outputs": [],
    "source": []
